fix: z-index for header

--- a/src/components/shared/shared.css
+++ b/src/components/shared/shared.css
@@ -5,6 +5,7 @@
 
   position: sticky;
   background-color: var(--gray-1);
+  z-index: 2;
   top: 0;
   display: flex;
   align-items: center;
